--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,35 @@ body {
 
 main {
   background: #1A1B21;
-  margin-top: 0;
+}
+
+.main--name {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30.26px;
+  color: #fff;
+}
+
+.main--position {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 15px;
+  color: #F3BF99;
+}
+
+.main--website {
+  font-weight: 400;
+  color: #F5F5F5;
+  font-size: 10px;
+  line-height: 15px;
+}
+
+.main--name, .main--position, .main--website {
+  text-align: center;
 }
 
 footer {
+  height: 64px;
   background: #161619;
   border-radius: 0 0 10px 10px;
 }
